infrastructure/ingress/ingress/base/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: forward-auth-bouncer-admin
#spec:
#  forwardAuth:
#    address: http://forward-auth-bouncer.traefik.svc.cluster.local/auth/admin
#    authResponseHeaders:
#      - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
spec:
  forwardAuth:
    address: http://forward-auth.traefik.svc:4181
    authResponseHeaders:
      - X-Forwarded-User
