infrastructure/ingress/ingress/base/ingressroute-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.${BASE_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://github.com/traefik/traefik/blob/master/docs/content/assets/img/traefik.logo.png?raw=true"
    dashboard.zippelf.com/display-name: "Traefik"
    dashboard.zippelf.com/docs: "https://docs.traefik.io/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-dashboard-ingress
  routes:
    - match: Host(`traefik.${BASE_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-forward-auth
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: dashboard-bouncer
#spec:
#  entryPoints:
#    - web
#  routes:
#    - match: Host(`traefik.${BASE_DOMAIN}`)
#      kind: Rule
#      services:
#        - name: traefik-gatekeeper
#          port: 3000
#      middlewares:
#        - name: redirect-https
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: dashboard-bouncer-tls
#spec:
#  entryPoints:
#    - websecure
#  tls:
#    secretName: tls-dashboard-ingress
#  routes:
#    - match: Host(`traefik.${BASE_DOMAIN}`)
#      kind: Rule
#      services:
#        - name: traefik-gatekeeper
#          port: 3000
